--- a/Templates/chat.html
+++ b/Templates/chat.html
@@ -20,10 +20,10 @@
 					<div class="card">
 						<div class="card-header msg_head">
 							<div class="d-flex bd-highlight">
+							
 								<div class="img_cont">
-                <img src="c5550f803c78b104675348c0ed287bea.jpg" class="rounded-circle user_img">
-
-                  <span class="online_icon"></span>
+                                    <img src="{{ url_for('static', filename='3d-cartoon-style-character.jpg')}}" class="rounded-circle user_img">
+								    <span class="online_icon"></span>
 								</div>
 								<div class="user_info">
 									<span>Medical Chatbot</span>
@@ -32,7 +32,6 @@
 							</div>
 						</div>
 						<div id="messageFormeight" class="card-body msg_card_body">
-							
 							
 						</div>
 						<div class="card-footer">
